# news_crawler_python

./: .gitignore  README.md  main.py  pyproject.toml
news_crawler/lib/: config.py  constants.py  settings.py  slack.py  twitter.py
news_crawler/models/: crawler.py  notifier.py  url_summarizer.py
news_crawler/valueobjects/: summarized_url.py  tweet.py  url.py
tests/lib/: test_twitter.py
tests/models/: test_crawler.py
